<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_toolbar"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/lbl_list_note"
            android:fontFamily="@font/lato_semibold"
            android:textSize="18sp"
            android:textColor="@color/grey_400"
            />
        <ImageView
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/bg_add_button_ripple_effect"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/rlToolbar"
        app:layout_constraintBottom_toTopOf="@id/btnCreateNote"
        />

    <RelativeLayout
        android:id="@+id/rlEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/ivMessage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_message_black_24dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMessage"
            android:text="@string/lbl_empty_description"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/grey_400"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnCreateNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_react_ripple_effect">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:gravity="center_vertical"
            android:textColor="@color/grey_400"
            android:textSize="18sp"
            android:text="@string/lbl_take_note"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>