<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.editor.EditorActivity"
    android:background="@color/grey_900">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_toolbar"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        >
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btnBack"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/lbl_editor"
            android:fontFamily="@font/lato_semibold"
            android:textSize="18sp"
            android:textColor="@color/grey_400"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/ivMessage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_message_black_24dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMessage"
            android:text="@string/lbl_loading_webview"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/lato_semibold"
            android:textColor="@color/grey_400"
            android:textSize="20sp"
            />
    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEditorContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rlToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/lbl_title"
            app:hintTextColor="@color/grey_400"
            android:textColorHint="@color/grey_400"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:textColor="@color/grey_400"
                android:fontFamily="@font/lato_semibold"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <WebView
            android:id="@+id/wvMain"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tilTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>